# PatchImpact

./: .gitignore  CMakeLists.txt  README.md  config.h.in
include/: BehavioralImpactCalculator.h  BuildStatusAnalyzer.h  ComplexityAnalyzer.h  CppcheckAnalyzer.h  CsvExportManager.h  DiffAnalyzer.h  DynamicMeasurementsAnalyzer.h  IndividualAssessmentAnalyzer.h  LevenshteinAnalyzer.h  LineAnalyzer.h  MaintainabilityAnalyzer.h  MassAssessmentAnalyzer.h  OverallImpactCalculator.h  PatchImpactApp.h  QualityImpactCalculator.h  ReportCapture.h  SourceFileCollector.h  StructuralImpactCalculator.h
src/: BehavioralImpactCalculator.cpp  BuildStatusAnalyzer.cpp  ComplexityAnalyzer.cpp  CppcheckAnalyzer.cpp  CsvExportManager.cpp  DiffAnalyzer.cpp  DynamicMeasurementsAnalyzer.cpp  IndividualAssessmentAnalyzer.cpp  LevenshteinAnalyzer.cpp  LineAnalyzer.cpp  MaintainabilityAnalyzer.cpp  MassAssessmentAnalyzer.cpp  OverallImpactCalculator.cpp  PatchImpactApp.cpp  QualityImpactCalculator.cpp  ReportCapture.cpp  SourceFileCollector.cpp  StructuralImpactCalculator.cpp  main.cpp
thesis-document/: README.md
thesis-supplementary/: README.md
thesis-supplementary/csv-results/: berry_1_mass.csv  berry_2_mass.csv  berry_3_mass.csv  berry_4_mass.csv  berry_5_mass.csv  coreutils_1_mass.csv  cpp_peglib_1_mass.csv  progress.csv  summary.csv
thesis-supplementary/dataset-notes/: mini_mass_summary.txt
thesis-supplementary/reports/: berry_1_report.txt  berry_2_report.txt  berry_3_report.txt  berry_4_report.txt  berry_5_report.txt  coreutils_1_report.txt
